--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": false,
   "author": "liangxinchao",
   "dependencies": {
+    "@jiaminghi/data-view-react": "^1.2.4",
     "@ant-design/icons": "^4.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.10.3",
     "dva": "^2.4.1",
+    "sass-loader": "8.0.2",
+    "styled-components": "^5.2.0",
+    "echarts": "^4.9.0",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
